# huggingface_hub_rust

./: AGENTS.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature_request.md
.github/workflows/: ci.yml
docs/plans/: 2026-04-08-hf-bucket-rust-client.md
docs/specs/: 2026-04-08-hf-bucket-rust-client-design.md
docs/superpowers/plans/: 2026-03-13-hf-hub-implementation.md  2026-03-15-feature-expansion.md  2026-03-24-cache-system-implementation.md  2026-03-27-hfrs-cli-implementation.md  2026-04-09-buckets-implementation.md  2026-04-10-per-file-upload-progress.md  2026-04-11-upload-progress-bars.md  2026-04-14-bucket-sync.md
docs/superpowers/specs/: 2026-03-13-hf-hub-rust-design.md  2026-03-24-cache-system-design.md  2026-03-27-hfrs-cli-design.md  2026-03-31-hfrepo-design.md  2026-04-05-progress-tracking-design.md  2026-04-05-progress-tracking-polling-design.md  2026-04-09-buckets-design.md  2026-04-11-upload-progress-bars-design.md  2026-04-14-bucket-sync-design.md
hf_hub/: Cargo.toml
hf_hub/src/: client.rs  constants.rs  error.rs  lib.rs  pagination.rs  xet.rs
hf_hub/src/api/: commits.rs  files.rs  mod.rs  repo.rs  users.rs
hf_hub/src/types/: commit.rs  mod.rs  params.rs  repo.rs
hf_hub/tests/: integration_test.rs
hfrs/: Cargo.toml  README.md
hfrs/src/: cli.rs  main.rs  output.rs
hfrs/src/commands/: download.rs  env.rs  mod.rs  upload.rs  version.rs
hfrs/src/commands/access_requests/: accept.rs  cancel.rs  grant.rs  list.rs  reject.rs
hfrs/src/commands/auth/: list.rs  login.rs  logout.rs  switch.rs  whoami.rs
hfrs/src/commands/cache/: list.rs  mod.rs  rm.rs
hfrs/src/commands/collections/: add_item.rs  create.rs  delete.rs  delete_item.rs  info.rs  list.rs  mod.rs  update.rs  update_item.rs
hfrs/src/commands/datasets/: info.rs  list.rs  mod.rs
hfrs/src/commands/discussions/: close.rs  comment.rs  create.rs  diff.rs  info.rs  list.rs  merge.rs  rename.rs  reopen.rs
hfrs/src/commands/endpoints/: delete.rs  deploy.rs  describe.rs  list.rs  pause.rs  resume.rs  scale_to_zero.rs  update.rs
hfrs/src/commands/jobs/: cancel.rs  hardware.rs  inspect.rs  logs.rs  mod.rs  ps.rs  run.rs  stats.rs
hfrs/src/commands/jobs/scheduled/: delete.rs  inspect.rs  ps.rs  resume.rs  run.rs  suspend.rs
hfrs/src/commands/likes/: like.rs  list.rs  mod.rs  unlike.rs
hfrs/src/commands/models/: info.rs  list.rs  mod.rs
hfrs/src/commands/papers/: info.rs  list.rs  mod.rs  search.rs
hfrs/src/commands/repos/: branch.rs  create.rs  delete.rs  delete_files.rs  mod.rs  move_repo.rs  settings.rs  tag.rs
hfrs/src/commands/spaces/: info.rs  list.rs  mod.rs
hfrs/src/commands/webhooks/: create.rs  delete.rs  disable.rs  enable.rs  info.rs  list.rs  mod.rs  update.rs
hfrs/src/util/: mod.rs  paths.rs  token.rs
hfrs/tests/: cli_comparison.rs
hfrs/tests/helpers/: mod.rs
huggingface_hub/: Cargo.toml  README.md
huggingface_hub/examples/: access_requests.rs  blocking_read.rs  blocking_repo_handles.rs  blocking_spaces.rs  blocking_write.rs  buckets.rs  collections.rs  commits.rs  diff.rs  discussions.rs  download_upload.rs  files.rs  inference_endpoints.rs  jobs.rs  likes.rs  papers.rs  progress.rs  repo.rs  repo_handles.rs  spaces.rs  users.rs  webhooks.rs
huggingface_hub/src/: blocking.rs  bucket.rs  buckets.rs  cache.rs  client.rs  constants.rs  diff.rs  error.rs  lib.rs  pagination.rs  repository.rs  test_utils.rs  xet.rs
huggingface_hub/src/api/: access_requests.rs  buckets.rs  cache.rs  collections.rs  commits.rs  discussions.rs  files.rs  inference_endpoints.rs  jobs.rs  likes.rs  mod.rs  papers.rs  repo.rs  spaces.rs  sync.rs  users.rs  webhooks.rs
huggingface_hub/src/types/: access_requests.rs  bucket_params.rs  buckets.rs  cache.rs  collections.rs  commit.rs  discussions.rs  inference_endpoints.rs  jobs.rs  likes.rs  mod.rs  papers.rs  params.rs  progress.rs  repo.rs  repo_params.rs  sync.rs  user.rs  webhooks.rs
huggingface_hub/tests/: blocking_test.rs  bucket_sync_test.rs  cache_test.rs  download_test.rs  integration_test.rs  xet_transfer_test.rs
huggingface_hub/tests/cli/: cli_comparison.rs  helpers.rs
