[package]
name = "hf-hub"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Hugging Face Hub API"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
futures = "0.3"
typed-builder = "0.20"
globset = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
