[package]
name = "hfrs"
version = "0.1.0"
edition = "2021"
description = "CLI for the Hugging Face Hub"
license = "Apache-2.0"

[[bin]]
name = "hfrs"
path = "src/main.rs"

[dependencies]
huggingface-hub = { path = "../huggingface_hub", features = [
    "blocking",
    "xet",
    "spaces",
    "inference_endpoints",
    "collections",
    "discussions",
    "webhooks",
    "jobs",
    "access_requests",
    "likes",
    "papers",
] }
clap = { version = "4", features = ["derive", "env", "color"] }
owo-colors = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
serde_json = "1"
anyhow = "1"
tempfile = "3"
