[package]
name = "huggingface-hub"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Hugging Face Hub API"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
reqwest-middleware = { version = "0.5", features = ["json", "multipart", "query"] }
reqwest-retry = "0.9"
tokio = { version = "1", features = ["fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
futures = "0.3"
typed-builder = "0.20"
globset = "0.4"
base64 = "0.22"
async-trait = { version = "0.1", optional = true }
xet-data = { git = "https://github.com/huggingface/xet-core.git", rev = "6232b42", optional = true }
xet-client = { git = "https://github.com/huggingface/xet-core.git", rev = "6232b42", optional = true }

[features]
default = []
xet = ["dep:xet-data", "dep:xet-client", "dep:async-trait"]
spaces = []
inference_endpoints = []
collections = []
discussions = []
webhooks = []
jobs = []
access_requests = []
likes = []
papers = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
rand = "0.9"
sha2 = "0.10"
