[package]
name = "huggingface-hub"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Hugging Face Hub API"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
reqwest-middleware = { version = "0.5", features = ["json", "multipart", "query"] }
reqwest-retry = "0.9"
tokio = { version = "1", features = ["fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
futures = "0.3"
typed-builder = "0.20"
globset = "0.4"
base64 = "0.22"
fs4 = { version = "0.13", features = ["tokio"] }
pathdiff = "0.2"
async-trait = { version = "0.1", optional = true }
hf-xet = { git = "https://github.com/huggingface/xet-core.git", rev = "749c28b", optional = true }
xet-client = { git = "https://github.com/huggingface/xet-core.git", rev = "749c28b", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = []
blocking = ["tokio/rt"]
xet = ["dep:hf-xet", "dep:xet-client", "dep:async-trait", "dep:sha2"]
spaces = []
inference_endpoints = []
collections = []
discussions = []
webhooks = []
jobs = []
access_requests = []
likes = []
papers = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
rand = "0.9"
sha2 = "0.10"

[[example]]
name = "repo"
path = "examples/repo.rs"

[[example]]
name = "files"
path = "examples/files.rs"

[[example]]
name = "commits"
path = "examples/commits.rs"

[[example]]
name = "users"
path = "examples/users.rs"

[[example]]
name = "spaces"
path = "examples/spaces.rs"
required-features = ["spaces"]

[[example]]
name = "inference_endpoints"
path = "examples/inference_endpoints.rs"
required-features = ["inference_endpoints"]

[[example]]
name = "collections"
path = "examples/collections.rs"
required-features = ["collections"]

[[example]]
name = "discussions"
path = "examples/discussions.rs"
required-features = ["discussions"]

[[example]]
name = "webhooks"
path = "examples/webhooks.rs"
required-features = ["webhooks"]

[[example]]
name = "jobs"
path = "examples/jobs.rs"
required-features = ["jobs"]

[[example]]
name = "access_requests"
path = "examples/access_requests.rs"
required-features = ["access_requests"]

[[example]]
name = "likes"
path = "examples/likes.rs"
required-features = ["likes"]

[[example]]
name = "papers"
path = "examples/papers.rs"
required-features = ["papers"]

[[example]]
name = "blocking_read"
path = "examples/blocking_read.rs"
required-features = ["blocking"]

[[example]]
name = "blocking_write"
path = "examples/blocking_write.rs"
required-features = ["blocking"]
